# codecrafters-shell-rust

./: Cargo.toml  README.md  a  asdf.history  bacon.toml  bash-history.txt  codecrafters.yml  h  h.txt  my spaced file.txt  your_program.sh
src/: builtin_commands.rs  commands.rs  completion.rs  executable_path.rs  main.rs  stream_target.rs  tokens.rs
src/my_derives/: Cargo.toml
src/my_derives/src/: lib.rs
