[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.95"                                     # error handling
bytes = "1.10.0"                                      # helps manage buffers
thiserror = "2.0.11"
once_cell = "1.20.3"                                  # error handling
strum = { version = "0.27.1", features = ["derive"] }
log = "0.4.26"
colog = "1.3.0"

rustyline = { version = "15.0.0", features = ["derive"] }
my_derives = { path = "src/my_derives" }
itertools = "0.14.0"
os_pipe = "1.2.2"
rustversion = "1.0.21"
